--- a/ProductCrud/pom.xml
+++ b/ProductCrud/pom.xml
@@ -80,6 +80,18 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring</finalName>
 	</build>
-
+	    <distributionManagement>
+        <snapshotRepository>
+            <id>deployment</id>
+	    <name>NEXUS Snapshot</name>
+            <url>http://18.184.222.182:8081/repository/Devops_SNAP/</url>
+        </snapshotRepository>
+	<repository>
+            <id>deployment</id>
+	    <name>NEXUS Release</name>
+            <url>http://18.184.222.182:8081/repository/Devops_REL/</url>
+        </repository>
+    </distributionManagement>
 </project>
